# fOptimizer

./: .gitignore  LICENSE  README.md  fOptimizer.lnk  pyproject.toml  run.bat  start_foptimizer.bat
assets/: foptimizer-theme.json
src/foptimizer/: __init__.py
src/foptimizer/backend/: logic.py
src/foptimizer/backend/tools/: audio_conversion.py  image_conversion.py  misc.py  patcher.py  remove_redundancies.py
src/foptimizer/gui/: app.py
